# PCSS_mini_project

./: CMakeLists.txt  README.md  README.txt  SoccerManager.depend  SoccerManager.layout
Client/: main.cpp
Server/: main.cpp
